# qv2wm

./: Config.tmpl  Makefile.in  Makefile.std  README  README.md  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
doc/: BUGS.en  BUGS.jp  CHANGES.en  CHANGES.jp  Makefile.in  README.en  README.fr  README.jp  TODO.jp
images/: Makefile.in
man/: Makefile.in  qvwm.man  qvwm.man-fr  qvwm.man-jp
qvwm-utils/qvwm-background/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  qvwm-background.glade  qvwm-background.gladep.bak
qvwm-utils/qvwm-background/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
qvwm-utils/qvwm-background/po/: Makefile  Makefile.in
qvwm-utils/qvwm-background/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h
qvwm-utils/qvwm-net/: Imakefile  Makefile  README  qvwm-net.c
qvwm-utils/qvwm-net/xpm/: connected.xpm  disconnected.xpm  lightregions  litup.xpm
qvwm-utils/qvwm-newdesklaunch/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  qvwm-newdesklaunch.glade.bak  qvwm-newdesklaunch.gladep
qvwm-utils/qvwm-newdesklaunch/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
qvwm-utils/qvwm-newdesklaunch/po/: Makefile  Makefile.in
qvwm-utils/qvwm-newdesklaunch/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak
qvwm-utils/qvwm-run/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  qvwm-run.glade.bak  qvwm-run.gladep.bak
qvwm-utils/qvwm-run/autom4te.cache/: output.0  output.1  traces.0  traces.1
qvwm-utils/qvwm-run/po/: Makefile  Makefile.in
qvwm-utils/qvwm-run/src/: Makefile  (+5 more)
qvwm-utils/qvwm-sound/: Imakefile  Makefile  README  qvwm-sound.c
rc/: Imakefile  Makefile.am  Makefile.in  Makefile.std  default.qvwm-theme  french.qvwmrc.in  kanji.qvwmrc.in  korean.qvwmrc.in  light.qvwmrc.in  space.qvwm-theme  system.qvwmrc.in
sounds/: Makefile.in
src/: Imakefile  Makefile.am  Makefile.in  Makefile.std  accessory.cc  accessory.h  anim_image.cc  anim_image.h  audio.cc  audio.h  audio_au.cc  audio_au.h  audio_wav.cc  audio_wav.h  button.cc  button.h  callback.h  colormap.cc  configure.cc  confirm_dialog.cc  confirm_dialog.h  ctrl_button.cc  debug.cc  debug.h  desktop.cc  desktop.h  dialog.cc  dialog.h  event.cc  event.h  exec.cc  exec.h  exit_dialog.cc  exit_dialog.h  extra_image.cc  extra_image.h  fbutton.cc  fbutton.h  focus.cc  focus_mgr.cc  (+82 more)
src/bitmaps/: Makefile.in  logo_qvwm11.xpm
(+5 files in other folders)
