## Process this file with automake to produce Makefile.in

rcdir = $(QVWMDIR)
themes = default.qvwm-theme clouds.qvwm-theme space.qvwm-theme
rc_DATA = system.qvwmrc kanji.qvwmrc french.qvwmrc korean.qvwmrc \
          light.qvwmrc $(themes)

EXTRA_DIST = \
    system.qvwmrc.in kanji.qvwmrc.in french.qvwmrc.in korean.qvwmrc.in \
    light.qvwmrc.in $(themes) Imakefile Makefile.std
